# libp2p-sharding-demo

./: BUILD.bazel  README.md  WORKSPACE
bootnode/: BUILD.bazel  main.go
client/: BUILD.bazel  main.go  status.go
host/: BUILD.bazel  basic_host.go
proto/: BUILD.bazel  bootnode.proto  messages.proto
