load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/prestonvanloon/libp2p-sharding-demo/client",
    visibility = ["//visibility:private"],
    deps = [
        "//host:go_default_library",
        "//proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_libp2p_go_libp2p_host//:go_default_library",
        "@com_github_libp2p_go_libp2p_net//:go_default_library",
        "@com_github_libp2p_go_libp2p_peer//:go_default_library",
        "@com_github_libp2p_go_libp2p_peerstore//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
