load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["basic_host.go"],
    importpath = "github.com/prestonvanloon/libp2p-sharding-demo/host",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_libp2p_go_libp2p//:go_default_library",
        "@com_github_libp2p_go_libp2p_crypto//:go_default_library",
        "@com_github_libp2p_go_libp2p_host//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
    ],
)
