load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bootnode_proto",
    srcs = ["bootnode.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bootnode_go_proto",
    importpath = "github.com/prestonvanloon/libp2p-sharding-demo/proto",
    proto = ":bootnode_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":bootnode_go_proto"],
    importpath = "github.com/prestonvanloon/libp2p-sharding-demo/proto",
    visibility = ["//visibility:public"],
)
